--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -22,10 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "@line/liff": "^2.23.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.3",
-    "mongoose": "^8.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
